# mido

./: .buildinfo  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.html  LICENSE  MANIFEST.in  MESSAGE_TYPES  README  README.rst  SECURITY.md  TODO  about_midi.html  acknowledgements.html  api.html  authors.html  binaries.html  changes.html  contributing.html  debug_sysex.py  example1.py  example_input.py  example_input_filter.py  example_ioport.py  example_list_devices.py  example_list_ports.py  example_multi_receive.py  example_non_blocking.py  example_non_blocking_receive.py  example_note_off.py  example_output.py  example_print.py  example_print_hex.py  example_receive.py  example_send.py  freezing_exe.html  genindex.html  glossary.html  (+33 more)
.doctrees/: CODE_OF_CONDUCT.doctree  about_midi.doctree  acknowledgements.doctree  api.doctree  authors.doctree  binaries.doctree  changes.doctree  contributing.doctree  environment.pickle  freezing_exe.doctree  glossary.doctree  index.doctree  installing.doctree  intro.doctree  licenses.doctree  message_types.doctree  meta_message_types.doctree  resources.doctree
.doctrees/backends/: amidi.doctree  custom.doctree  index.doctree  portmidi.doctree  pygame.doctree  rtmidi.doctree  rtmidi_python.doctree
.doctrees/files/: index.doctree  midi.doctree  syx.doctree
.doctrees/messages/: frozen.doctree  index.doctree  parsing.doctree  serializing.doctree
.doctrees/ports/: custom.doctree  index.doctree  socket.doctree
.doctrees/shared/: licenses_logos.doctree
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.md.license
.github/workflows/: documentation.yml  release.yml  test.yml
.reuse/: dep5
_sources/: api.rst.txt  authors.rst.txt  binaries.rst.txt  changes.rst.txt  freezing_exe.rst.txt  index.rst.txt  installing.rst.txt  intro.rst.txt  licenses.rst.txt  message_types.rst.txt  meta_message_types.rst.txt  resources.rst.txt
_sources/backends/: amidi.rst.txt  custom.rst.txt  index.rst.txt  pygame.rst.txt  rtmidi_python.rst.txt
_sources/files/: index.rst.txt  midi.rst.txt  syx.rst.txt
_sources/messages/: frozen.rst.txt  index.rst.txt  parsing.rst.txt  serializing.rst.txt
_sources/ports/: index.rst.txt  socket.rst.txt
_static/: documentation_options.js
backends/: amidi.html  custom.html  index.html  portmidi.html  pygame.html  rtmidi.html  rtmidi_python.html
docs/: MESSAGE_TYPES  Makefile  README  about_midi.rst  acknowledgements.rst  api.rst  author.rst  authors.rst  backends.rst  bin.rst  changes.rst  code-of-conduct.rst  code_of_conduct.rst  conf.py  contributing.rst  executable.rst  freezing.rst  frozen_messages.rst  glossary.rst  implementing_backends.rst  implementing_ports.rst  index.rst  installing.rst  intro.rst  ioapi.py  lib.rst  license.rst  make.bat  message_arguments.rst  message_types.rst  messages.rst  meta_event_types.rst  meta_message_types.rst  midi.txt  midi_files.rst  new_port_types.rst  parsing.rst  parsing_and_encoding.rst  port_api.rst  portmidi.rst  (+10 more)
docs/_static/: README.rst
docs/backends/: amidi.rst  index.rst  portmidi.rst  pygame.rst  rtmidi.rst  rtmidi_python.rst
docs/files/: midi.rst
docs/images/: midi_time.svg.license
docs/messages/: frozen.rst  index.rst  parsing.rst  serializing.rst
docs/ports/: custom.rst
docs/shared/: licenses_logos.rst
examples/: buffer_port.py  input_filter.py  list_devices.py  multi_receive.py  nonblocking_receive.py  off.py  output.py  play_midi_file.py  print.py  print_midi_file.py  queue_port.py  send.py  using_rtmidi_directly.py
examples/backends/: printer.py  rtm.py  rtmidi_python_backend.py  test_printer.py  use_printer.py
examples/callback_w_args/: callback_w_args.py
examples/custom_backend/: printer.py  test.py
examples/midifiles/: create_midi_file.py  midifile_to_json.py  play_midi_file.py  print_midi_file.py  show_midifile.py  test.sh
examples/ports/: buffer_port.py  input_filter.py  list_ports.py  multi_receive.py  nonblocking_receive.py  queue_port.py  receive.py  send.py
examples/sockets/: connect.py  forward_ports.py  serve.py  serve_ports.py  simple_client.py  simple_server.py
extras/: README.rst  hid_joystick.py  hidev.py  midi_files.py  mido_pygame.py  mido_rtmidi.py  print_midi_file.py  rtmido.py
files/: index.html  midi.html  syx.html
logo/: README.md  mido_shadow-vertical.png.license
messages/: frozen.html  index.html  parsing.html  serializing.html
midi/: asserts.py  msg.py  portmidi.py  types.py
mido/: __about__.py  __init__.py  _types.py  filters.py  frozen.py  iobase.py  messages.py  midifiles.py  midifiles_meta.py  msg.py  parser.py  portmidi.py  portmidi_wrapper.py  ports.py  py2.py  shortcuts.py  sockets.py  syx.py  test_frozen.py  test_messages.py  test_midifiles.py  test_midifiles2.py  test_midifiles_load.py  test_parser.py  test_ports.py  test_sockets.py  test_string_format.py  test_syx.py  text.py  tokenizer.py  types.py  version.py
mido/backends/: __init__.py  _common.py  _parser_queue.py  _queue.py  amidi.py  backend.py  portmidi.py  portmidi_init.py  pygame.py  rtmidi.py  rtmidi_python.py  rtmidi_utils.py  test_backend.py  test_rtmidi.py  tevirtualmidi.py
mido/file/: __init__.py  syx.py
mido/messages/: __init__.py  check.py  checks.py  decode.py  defs.py  encode.py  messages.py  specs.py  strings.py  test_check.py  test_checks.py  test_decode.py  test_decoder.py  test_encode.py  test_messages.py  test_strings.py
modo/: amidi.py  msg.py  parser.py  portmidi.py
ports/: custom.html  index.html  socket.html
protomidi/: __init__.py  amidi.py  asserts.py  hexenc.py  io.py  io_init.py  msg.py  parser.py  portmidi.py  portmidi_init.py  serializer.py
scripts/: mido_connect.py  mido_play.py  mido_ports.py  mido_serve.py
shared/: licenses_logos.html
socket_test/: client.py  mido  mpk_midi_client.py  server.py  sh201_server.py
test/: tests.py
tests/: test_frozen.py  test_parser.py  test_ports.py  test_sockets.py  test_syx.py  test_tokenizer.py
tmp/: input.py  list.py  segfault.py
(+80 files in other folders)
